--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "aframe-skeletor",
-	"version": "0.0.4",
+	"version": "0.0.6",
 	"description": "Inverse Kinematics for AFRAME",
 	"main": "dst/aframe-skeletor.cjs.js",
 	"module": "dst/aframe-skeletor.es.js",
@@ -23,10 +23,9 @@
 		"@rollup/plugin-sucrase": "^3.1.0",
 		"rollup": "^2.26.3",
 		"rollup-plugin-terser": "^7.0.0",
-		"three-skeletor": "0.0.4"
+		"three-skeletor": "0.0.x"
 	},
 	"peerDependencies": {
-		"aframe": "^1.0.4",
-		"three": "^0.119.1"
+		"aframe": "^1.0.4"
 	}
 }
